More tests for source folder patch.